<resources>
    <string name="app_name">RateMyMovie</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password">confirm password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="name">name</string>
</resources>